--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,28 @@
 #calculator {
-    width: 500px;
-    height: 500px;
+    width: 308px;
+    height: 356px;
     border: 5px solid #444444;
 }
 #readout {
     height: 50px;
     border: 3px solid #999999;
+    font-family: 'Orbitron', sans-serif;
+    font-size: 40px;
+    text-align: right;
+}
+
+button {
+    height: 50px;
+    width: 100px;
+    font-size: 25px;
+    background: #BBBBBB;
+}
+
+.operator, #equals {
+    background: #E5AF4A;
+    color: white;
+}
+
+#clear, #all-clear {
+    background: #727171;
 }
