--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,7 @@
     width: 308px;
     height: 356px;
     border: 5px solid #444444;
+
 }
 #readout {
     height: 50px;
@@ -9,6 +10,8 @@
     font-family: 'Orbitron', sans-serif;
     font-size: 40px;
     text-align: right;
+    background: #2A2A2A;
+    color: white;
 }
 
 button {
@@ -16,6 +19,7 @@ button {
     width: 100px;
     font-size: 25px;
     background: #BBBBBB;
+    border-radius: 5px;
 }
 
 .operator, #equals {
